client/src/App.css
/* ... */
.list-card-primary-info {
  margin-left: 20px;
  margin-bottom: 8px;
}
.world-list-primary-set, .user-list-primary-set {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: left;
}
.list-primary-set-icon {
  margin-right: 8px;
}
.list-card-secondary-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.world-list-secondary-set {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.user-list-secondary-set {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: right;
  width: 175px;
}
.list-secondary-set-icon {
  margin-right: 5px;
}

.list-card-add {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: top;
  overflow: hidden;

  margin-top: 5px;
  margin-bottom: 20px;
  background-color: #449aeb;
  color: white;
  box-shadow: 4px 4px 10px 4px rgb(0 0 0 /8%);

  width: 350px;

  padding: 15px;
}
.card-add-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.card-add-icon {
  font-size: 26px;
}
.form-add-new {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.form-add-fields-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.form-select {
  margin-bottom: 10px;
  width: 200px;
  font-family: "Abel";
  font-size: 16px;
  border: none;
}
.form-select-option {
  font-size: 16px;
}
.radio-button-container {
  margin-bottom: 5px;
}
.add-form-input {
  margin-bottom: 10px;
  width: 200px;
  font-family: "Abel";
  font-size: 16px;
  border: none;
}
.add-new-submit-button {
  margin-top: 5px;
  margin-bottom: 5px;
}
.login-input-field, .form-input-field-add-user {
  margin-bottom: 10px;
  width: 200px;
  font-family: "Abel";
  font-size: 16px;
}


/* Detail Pages */
.world-detail-page, .user-detail-page, .character-detail-page {
  display: flex;
  flex-direction: column;
  align-items: top;
  justify-content: center;
}
.detail-list-grid {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  margin-bottom: 30px;
}
.detail-card-primary {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  overflow: hidden;

  margin-top: 5px;
  margin-bottom: 20px;
  background-color: #4471eb;
  box-shadow: 4px 4px 10px 4px rgb(0 0 0 /8%);

  width: 350px;
  min-height: 300px;

  padding: 15px;
}
.detail-card-image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  width: 345px;
}
.detail-card-image {
  max-height: 400px;
  min-height: 150px;
  min-width: 345px;
}
.detail-card-info-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  overflow: hide;

  /* background-color: #449aeb; */
  margin-top: 15px;
  width: 175px;
  min-height: 40px;
  padding-bottom: 10px;
}
.detail-char-des-bubble-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  overflow: hide;
  max-height: 50px;

  margin-bottom: 10px;
}
.detail-char-des-bubble {
  display: flex;
  justify-content: center;
  align-items: center;

  border-radius: 20px;
  padding: 2px 10px;
  margin-right: 10px;
  margin-top: 5px;

  background-color: black;
  color: white;
}
.detail-card-secondary {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  
  /* background-color: #4471eb; */
  box-shadow: 4px 4px 10px 4px rgb(0 0 0 /8%);

  width: 350px;
  /* min-height: 100px; */
  padding: 10px;

  margin-bottom: 20px;
}
.detail-card-secondary-info-container {
  display: flex;
  flex-direction: column;
  /* justify-content: start;
  align-items: left; */
  overflow: hidden;
  width: 330px;
}
.detail-card-toggle-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;

  max-height: 50px;

  /* background-color: #449aeb; */
}
.detail-card-toggle-icon-set {
  display: flex;
  flex-direction: row;
  justify-content: right;
  align-items: center;
  font-size: 20px;
  /* background-color: #4471eb; */
}
.detail-card-secondary-info {
  margin: -5px 0px 10px 30px;
}
.detail-card-secondary-info-set-row {
  display: flex;
  flex-direction: row;

  margin-top: 5px;
}
.detail-card-secondary-info-set-column {
  display: flex;
  flex-direction: column;

  margin-top: 5px;
}


.text-following-10 {
  margin-left: 10px;
}
.offset-left-20 {
  margin-left: 20px;
}
.offset-top-5 {
  margin-top: 5px;
}


@media (min-width: 600px) {
  /* body {
    background: green;
  } */
  .userbar {
    background: linear-gradient(135deg, #44d5eb, #44ebab, #44eb87, #44eb52);
  
    color: white;
  
    width: 30%;
    min-width: 250px;
    max-width: 80%;
  }
  .navbar {
    background-image: linear-gradient(135deg, #4471eb, #449aeb, #44d5eb, #44ebab);
  
    color: white;
  
    width: 30%;
    min-width: 250px;
    max-width: 80%;  
  }
}

